// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MobileFooter - Snapshots > matches snapshot for account menu trigger 1`] = `
<button
  aria-expanded="false"
  aria-haspopup="menu"
  aria-label="Account menu"
  class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none relative size-12 shrink-0 rounded-full"
  data-cy="footer-nav-profile-btn"
  data-size="icon"
  data-slot="button"
  data-state="closed"
  data-variant="ghost"
  id="radix-normalized"
  type="button"
>
  <div
    class="cursor-pointer"
    data-size="lg"
    data-testid="avatar-with-fallback"
  >
    <span
      data-testid="avatar-fallback"
    >
      TU
    </span>
    <span
      data-testid="avatar-name"
    >
      Test User
    </span>
  </div>
</button>
`;

exports[`MobileFooter - Snapshots > matches snapshot for navigation links 1`] = `
<a
  aria-label="Home"
  class="rounded-full p-3 transition-all bg-secondary"
  href="/home"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-house h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
    />
    <path
      d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
    />
  </svg>
</a>
`;

exports[`MobileFooter - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="fixed bottom-0 z-40 w-full overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 transition-transform duration-75 lg:hidden custom-footer"
  data-testid="container"
>
  <div
    class="mx-auto flex max-w-[380px] items-center justify-between sm:max-w-[600px] md:max-w-[720px]"
    data-testid="container"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 transition-all bg-secondary"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Collections"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/collections"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-library h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16 6 4 14"
        />
        <path
          d="M12 6v14"
        />
        <path
          d="M8 8v12"
        />
        <path
          d="M4 4v16"
        />
      </svg>
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Account menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none relative size-12 shrink-0 rounded-full"
      data-cy="footer-nav-profile-btn"
      data-size="icon"
      data-slot="button"
      data-state="closed"
      data-variant="ghost"
      id="radix-normalized"
      type="button"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with default props 1`] = `
<div
  class="fixed bottom-0 z-40 w-full overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 transition-transform duration-75 lg:hidden"
  data-testid="container"
>
  <div
    class="mx-auto flex max-w-[380px] items-center justify-between sm:max-w-[600px] md:max-w-[720px]"
    data-testid="container"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 transition-all bg-secondary"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Collections"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/collections"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-library h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16 6 4 14"
        />
        <path
          d="M12 6v14"
        />
        <path
          d="M8 8v12"
        />
        <path
          d="M4 4v16"
        />
      </svg>
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Account menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none relative size-12 shrink-0 rounded-full"
      data-cy="footer-nav-profile-btn"
      data-size="icon"
      data-slot="button"
      data-state="closed"
      data-variant="ghost"
      id="radix-normalized"
      type="button"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`MobileFooter - Snapshots > matches snapshot with different active path 1`] = `
<div
  class="fixed bottom-0 z-40 w-full overflow-x-auto bg-gradient-to-t from-background via-background/95 to-transparent px-3 py-4 transition-transform duration-75 lg:hidden"
  data-testid="container"
>
  <div
    class="mx-auto flex max-w-[380px] items-center justify-between sm:max-w-[600px] md:max-w-[720px]"
    data-testid="container"
  >
    <a
      aria-label="Home"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/home"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-house h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
        />
        <path
          d="M3 10a2 2 0 0 1 .709-1.528l7-6a2 2 0 0 1 2.582 0l7 6A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
        />
      </svg>
    </a>
    <a
      aria-label="Search"
      class="rounded-full p-3 transition-all bg-secondary"
      href="/search"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </a>
    <a
      aria-label="Hot"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/hot"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-flame h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3q1 4 4 6.5t3 5.5a1 1 0 0 1-14 0 5 5 0 0 1 1-3 1 1 0 0 0 5 0c0-2-1.5-3-1.5-5q0-2 2.5-4"
        />
      </svg>
    </a>
    <a
      aria-label="Collections"
      class="rounded-full p-3 transition-all border border-border bg-white/5 backdrop-blur-sm hover:bg-white/10"
      href="/collections"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-library h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m16 6 4 14"
        />
        <path
          d="M12 6v14"
        />
        <path
          d="M8 8v12"
        />
        <path
          d="M4 4v16"
        />
      </svg>
    </a>
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="Account menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer border shadow-xs hover:text-accent-foreground hover:bg-accent/50 border-none relative size-12 shrink-0 rounded-full"
      data-cy="footer-nav-profile-btn"
      data-size="icon"
      data-slot="button"
      data-state="closed"
      data-variant="ghost"
      id="radix-normalized"
      type="button"
    >
      <div
        class="cursor-pointer"
        data-size="lg"
        data-testid="avatar-with-fallback"
      >
        <span
          data-testid="avatar-fallback"
        >
          TU
        </span>
        <span
          data-testid="avatar-name"
        >
          Test User
        </span>
      </div>
    </button>
  </div>
</div>
`;
